@@ -5,12 +5,14 @@ ubiquity (2.9.32) UNRELEASED; urgency=low
     another override for the .menuitem padding that was making the panel
     28px large instead of 24px.
   * Only allow for one orca instance at a time. (LP: #945133)
+  * Fix crash in set_indicator_keymaps when reaching the fallback code
+    of the keyboar layout guesser. Added a test for it. (LP: #961003)
 
   [ Colin Watson ]
   * Make sure to load translations for "USB" and "CD" on the language page
     (LP: #958249).
 
- -- Stéphane Graber <stgraber@ubuntu.com>  Tue, 20 Mar 2012 21:45:58 -0400
+ -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 21 Mar 2012 09:46:29 -0400
 
 ubiquity (2.9.31) precise; urgency=low
 
